fixed some color contrasts

--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -71,7 +71,7 @@ small {
     font-size: 0.7rem;
 }
 a {
-    color: var(--dark-2);
+    color: var(--light-2);
     text-decoration: none;
     text-decoration-color: rgba(112, 169, 161, 1);
     letter-spacing: -0.025rem;
@@ -106,6 +106,9 @@ div {
 }
 .cta {
     text-align: left;
+}
+.cta a {
+    color: var(--dark-1);
 }
 main {
     padding: 20px 3% 100px 3%;
